# dbt-to-lookml

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  REINSTALL.sh  USAGE.md  coverage.xml  pyproject.toml  sp.yml
.claude/ai-docs/: architecture-vision.md  conversion-rules.md  lookml-features.md  testing-guide.md  wizard-system.md
.claude/commands/implement/: 1-spec.md  2-code.md.backup  3-test.md
.claude/commands/plan/: 1-decompose.md  2-create.md  3-strategy.md
.claude/commands/workflow/: batch-plan.md  execute.md  full.md
.github/workflows/: test.yml
.tasks/: GETTING_STARTED.md  MIGRATION.md  QUICKREF.md  README.md  SUMMARY.md  config.yaml  index.md
.tasks/epics/: DTL-001.md  DTL-007.md  DTL-014.md  DTL-022.md  DTL-029.md  DTL-037.md  DTL-046.md  DTL-054.md
.tasks/issues/: DTL-002.md  DTL-003.md  DTL-004.md  DTL-005.md  DTL-006.md  DTL-008.md  DTL-009.md  DTL-010.md  DTL-011.md  DTL-012.md  DTL-013.md  DTL-015.md  DTL-016.md  DTL-017.md  DTL-018.md  DTL-019.md  DTL-020.md  DTL-021.md  DTL-023.md  DTL-024.md  DTL-025.md  DTL-026.md  DTL-027.md  DTL-028.md  DTL-030.md  DTL-031.md  DTL-032.md  DTL-033.md  DTL-034.md  DTL-035.md  DTL-036.md  DTL-038.md  DTL-039.md  DTL-040.md  DTL-041.md  DTL-042.md  DTL-043.md  DTL-044.md  DTL-045.md  DTL-047.md  (+11 more)
.tasks/plans/: README.md  cross-entity-metrics-plan.yaml  issue-plan-cli-wizard-enhancements.yaml  issue-plan-date-selector.yaml  issue-plan-derived-metric-pop.yaml  issue-plan-explore-field-exposure-control.yaml  issue-plan-field-visibility-bugs.yaml  issue-plan-metrics-support-and-field-visibility.yaml  issue-plan-pop-period-over-period.yaml  issue-plan-refactor-schemas-to-directory.yaml  issue-plan-time-dimension-hierarchical-organization.yaml  issue-plan-timezone-conversion-config.yaml  issue-plan-timezone-selector-enhancements.yaml  issue-plan-universal-measure-suffix-hiding.yaml  issue-plan-wizard-help-llm-prompt-updates.yaml  v2-rebuild.md
.tasks/specs/: DTL-002-spec.md  DTL-003-spec.md  DTL-004-spec.md  DTL-005-spec.md  DTL-006-spec.md  DTL-008-spec.md  DTL-009-spec.md  DTL-010-spec.md  DTL-011-spec.md  DTL-012-spec.md  DTL-013-spec.md  DTL-015-spec.md  DTL-016-spec.md  DTL-017-spec.md  DTL-018-spec.md  DTL-019-spec.md  DTL-020-spec.md  DTL-021-spec.md  DTL-023-spec.md  DTL-024-spec.md  DTL-025-spec.md  DTL-026-spec.md  DTL-027-spec.md  DTL-028-spec.md  DTL-030-spec.md  DTL-031-spec.md  DTL-032-spec.md  DTL-033-spec.md  DTL-034-spec.md  DTL-035-spec.md  DTL-037-unified-spec.md  DTL-055-spec.md  DTL-056-spec.md  DTL-057-spec.md  DTL-058-spec.md  DTL-059-spec.md
.tasks/strategies/: DTL-002-strategy.md  DTL-003-strategy.md  DTL-004-strategy.md  DTL-005-strategy.md  DTL-006-strategy.md  DTL-008-strategy.md  DTL-009-strategy.md  DTL-010-strategy.md  DTL-011-strategy.md  DTL-012-strategy.md  DTL-013-strategy.md  DTL-015-strategy.md  DTL-016-strategy.md  DTL-017-strategy.md  DTL-018-strategy.md  DTL-019-strategy.md  DTL-020-strategy.md  DTL-021-strategy.md  DTL-023-strategy.md  DTL-024-strategy.md  DTL-025-strategy.md  DTL-026-strategy.md  DTL-027-strategy.md  DTL-028-strategy.md  DTL-030-strategy.md  DTL-031-strategy.md  DTL-032-strategy.md  DTL-033-strategy.md  DTL-034-strategy.md  DTL-035-strategy.md  DTL-036-strategy.md  DTL-037-unified-strategy.md
__tests__/integration/: test_end_to_end.py
__tests__/unit/: __init__.py  test_types.py
docs/: configuration.md  dbt-format.md  implementation-spec-metrics-visibility.md  lookml-view-label-comparison.md  quickstart.md  schema.md
examples/spothero/: facility_dimension.yml  facility_lifecycle.yml  facility_monthly_status.yml  rentals.yml  reviews.yml  sfdc_cases.yml  sp.yml  time_spine.yml
final_output/: devices.view.lkml  rental_details.view.lkml  rental_orders.view.lkml  searches.view.lkml  sessions.view.lkml
scripts/: apply_hierarchy_labels.py  dsi_spike.py  dtl_tasks.py  generate-test-report.py  run-tests.py  test-quick.sh  test.py  test_output_structure.sh
semantic_models/: sem_devices.yml  sem_rental_details.yml  sem_rental_orders.yml  sem_searches.yml  sem_sessions.yml  sem_users.yml
semantic_patterns/: README.md  __init__.py  __main__.py  config.py  credentials.py  manifest.py  prompts.py
semantic_patterns/adapters/: __init__.py  dialect.py
semantic_patterns/adapters/lookml/: __init__.py  explore_generator.py  generator.py  labels.py  paths.py  sql_qualifier.py  (+1 more)
semantic_patterns/app/: __init__.py
semantic_patterns/cli/: __init__.py  formatting.py  help_formatter.py  utils.py
semantic_patterns/core/: __init__.py  builder.py  looker_push.py
semantic_patterns/destinations/: __init__.py  base.py  github.py  looker.py
semantic_patterns/domain/: __init__.py  data_model.py  dimension.py  filter.py  measure.py  metric.py  model.py
semantic_patterns/ingestion/: __init__.py  builder.py  loader.py
specs/: 001-initial-plan.md
src/dbt_to_lookml/: __init__.py  __main__.py  config.py  constants.py  generator.py  mapper.py  models.py  parser.py  preview.py  schemas.py  types.py  validation.py
src/dbt_to_lookml_v2/: BUILD_LOG.md  PHASE4_SPEC.md  SCHEMA.md  __init__.py  __main__.py  config.py
src/semantic_models/: sem_rental_orders.yml  sem_searches.yml  sem_users.yml
src/tests/: test_cli.py  test_cli_wizard.py  test_error_handling.py  test_golden.py  test_performance.py
tests/: __init__.py  test_cli.py  test_config.py  test_dbt_ingestion.py  test_domain.py  test_error_handling.py  test_explore_adapter.py  test_integration.py  test_labels.py  test_lookml_adapter.py  test_output_structure.py  test_performance.py
tests/fixtures/: sample_semantic_model.yml  sp.yml
tests/golden/: expected_explores.lkml  expected_users.view.lkml
tests/integration/: __init__.py  test_end_to_end.py  test_hierarchy_integration.py
tests/unit/: test_generator.py  test_hierarchy.py  test_mapper.py  test_models.py  test_parser.py  test_schemas.py
tests/v2/: __init__.py  test_domain.py  test_explore_adapter.py  test_integration.py  test_lookml_adapter.py
(+184 files in other folders)
