[project]
name = "semantic-patterns"
version = "0.3.0"
description = "Transform semantic models into BI tool patterns (LookML, and more)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "DougsHub", email = "douglasgmcfarlane@gmail.com" }
]
maintainers = [
    { name = "DougsHub", email = "douglasgmcfarlane@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["semantic-layer", "lookml", "looker", "dbt", "analytics", "data-modeling", "bi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Database",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "lkml",
    "click>=8.0",
    "rich",
    "sqlglot>=28.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
    "build",
    "twine",
    "types-pyyaml",
]

[project.scripts]
sp = "semantic_patterns.__main__:cli"
semantic-patterns = "semantic_patterns.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_patterns"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "E501", "F841"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=semantic_patterns",
    "--cov-report=term-missing",
    "--cov-branch",
    "-v",
    "--tb=short",
]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (slower, end-to-end)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "types-pyyaml",
]
